tests/machine/x/c/load_yaml.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/load_yaml.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/load_yaml.c:192:3: error: unknown type name ‘list_Person’
  192 |   list_Person people = _load_json("../interpreter/valid/people.yaml");
      |   ^~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:192:24: error: incompatible types when initializing type ‘int’ using type ‘list_map_string’
  192 |   list_Person people = _load_json("../interpreter/valid/people.yaml");
      |                        ^~~~~~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:193:54: error: request for member ‘len’ in something not a structure or union
  193 |   list_adultsItem _t1 = list_adultsItem_create(people.len);
      |                                                      ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:195:33: error: request for member ‘len’ in something not a structure or union
  195 |   for (int _t3 = 0; _t3 < people.len; _t3++) {
      |                                 ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:196:22: error: request for member ‘data’ in something not a structure or union
  196 |     Person p = people.data[_t3];
      |                      ^

   1: #include <stdio.h>
